--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "body-parse": "^0.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
