--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
-    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.12.4",
